TFP-6069 ny integrasjon med fpsak, nytt endepunkt og dtos. Fjerner eg… (#2674)
* TFP-6069 ny integrasjon med fpsak, nytt endepunkt og dtos. Fjerner eget domeneobjekter og tilhørende mapping

* TFP-6069 fjernet ubrukt

* TFP-6069 nytt vilkår