@@ -1,11 +1,10 @@
 package no.nav.foreldrepenger.fpformidling.brevproduksjon.mapper.felles;
 
 import java.util.List;
-import java.util.Optional;
 
-import no.nav.foreldrepenger.fpformidling.domene.behandling.Behandling;
 import no.nav.foreldrepenger.fpformidling.domene.behandling.KonsekvensForYtelsen;
-import no.nav.foreldrepenger.fpformidling.domene.familiehendelse.FamilieHendelse;
+import no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.BrevGrunnlagDto;
+import no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.KodeverkMapper;
 import no.nav.foreldrepenger.fpformidling.kodeverk.kodeverdi.BehandlingÅrsakType;
 
 public final class BehandlingMapper {
@@ -15,29 +14,26 @@ public final class BehandlingMapper {
 
     public static final String ENDRING_BEREGNING_OG_UTTAK = "ENDRING_BEREGNING_OG_UTTAK";
 
-    public static boolean erTermindatoEndret(FamilieHendelse familieHendelse, Optional<FamilieHendelse> originalFamiliehendelse) {
-        return originalFamiliehendelse.filter(hendelse -> !hendelse.termindato().equals(familieHendelse.termindato())).isPresent();
+    public static boolean erTermindatoEndret(BrevGrunnlagDto.FamilieHendelse familieHendelse, BrevGrunnlagDto.FamilieHendelse originalFamiliehendelse) {
+        return !originalFamiliehendelse.termindato().equals(familieHendelse.termindato());
     }
 
-    public static Boolean erEndretFraAvslått(Optional<Behandling> orginalBehandling) {
-        return orginalBehandling.map(forrigeBehandling -> forrigeBehandling.getBehandlingsresultat().erAvslått()).orElse(false);
+    public static boolean erRevurderingPgaEndretBeregningsgrunnlag(BrevGrunnlagDto revurdering) {
+        var konsekvenserForYtelsen = revurdering.behandlingsresultat().konsekvenserForYtelsen();
+        return konsekvenserForYtelsen.contains(BrevGrunnlagDto.Behandlingsresultat.KonsekvensForYtelsen.ENDRING_I_BEREGNING) && konsekvenserForYtelsen.size() == 1;
     }
 
-    public static boolean erRevurderingPgaEndretBeregningsgrunnlag(Behandling revurdering) {
-        var konsekvenserForYtelsen = revurdering.getBehandlingsresultat().getKonsekvenserForYtelsen();
-        return konsekvenserForYtelsen.contains(KonsekvensForYtelsen.ENDRING_I_BEREGNING) && konsekvenserForYtelsen.size() == 1;
+    public static boolean erMedhold(BrevGrunnlagDto behandling) {
+        return BehandlingÅrsakType.årsakerEtterKlageBehandling().stream().map(KodeverkMapper::mapBehandlingÅrsak).anyMatch(behandling::harBehandlingÅrsak);
     }
 
-    public static boolean erMedhold(Behandling behandling) {
-        return BehandlingÅrsakType.årsakerEtterKlageBehandling().stream().anyMatch(behandling::harBehandlingÅrsak);
-    }
-
-    public static String kodeFra(List<KonsekvensForYtelsen> konsekvenserForYtelsen) {
-        if (konsekvenserForYtelsen.contains(KonsekvensForYtelsen.ENDRING_I_BEREGNING)) { // viktigst å få med endring i beregning
-            return konsekvenserForYtelsen.contains(
+    public static String kodeFra(List<BrevGrunnlagDto.Behandlingsresultat.KonsekvensForYtelsen> konsekvenserForYtelsen) {
+        var mapped = konsekvenserForYtelsen.stream().map(KodeverkMapper::mapKonsekvensForYtelsen).toList();
+        if (mapped.contains(KonsekvensForYtelsen.ENDRING_I_BEREGNING)) { // viktigst å få med endring i beregning
+            return mapped.contains(
                 KonsekvensForYtelsen.ENDRING_I_UTTAK) ? ENDRING_BEREGNING_OG_UTTAK : KonsekvensForYtelsen.ENDRING_I_BEREGNING.getKode();
         }
-        return konsekvenserForYtelsen.isEmpty() ? KonsekvensForYtelsen.UDEFINERT.getKode() : konsekvenserForYtelsen.get(0)
+        return mapped.isEmpty() ? KonsekvensForYtelsen.UDEFINERT.getKode() : mapped.getFirst()
             .getKode(); // velger bare den første i listen (finnes ikke koder for andre ev. kombinasjoner)
     }
 }
