@@ -7,6 +7,12 @@ import static no.nav.foreldrepenger.fpformidling.brevproduksjon.mapper.innvilgel
 import static no.nav.foreldrepenger.fpformidling.brevproduksjon.mapper.innvilgelsefp.VedtaksperiodeMapper.finnStønadsperiodeFom;
 import static no.nav.foreldrepenger.fpformidling.brevproduksjon.mapper.innvilgelsefp.VedtaksperiodeMapper.finnStønadsperiodeTom;
 import static no.nav.foreldrepenger.fpformidling.brevproduksjon.mapper.innvilgelsefp.VedtaksperiodeMapper.finnesPeriodeMedIkkeOmsorg;
+import static no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.BrevGrunnlagDto.Foreldrepenger;
+import static no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.BrevGrunnlagDto.PeriodeResultatType;
+import static no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.BrevGrunnlagDto.UttakArbeidType;
+import static no.nav.foreldrepenger.kontrakter.fpsak.tilkjentytelse.TilkjentYtelseDagytelseDto.Aktivitetstatus;
+import static no.nav.foreldrepenger.kontrakter.fpsak.tilkjentytelse.TilkjentYtelseDagytelseDto.TilkjentYtelseAndelDto;
+import static no.nav.foreldrepenger.kontrakter.fpsak.tilkjentytelse.TilkjentYtelseDagytelseDto.TilkjentYtelsePeriodeDto;
 import static org.assertj.core.api.Assertions.assertThat;
 
 import java.math.BigDecimal;
@@ -14,84 +20,75 @@ import java.time.LocalDate;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.function.UnaryOperator;
 
 import org.junit.jupiter.api.Test;
 
 import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.AktivitetStatus;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.BeregningsgrunnlagPeriode;
-import no.nav.foreldrepenger.fpformidling.domene.beregningsgrunnlag.BeregningsgrunnlagPrStatusOgAndel;
 import no.nav.foreldrepenger.fpformidling.domene.geografisk.Språkkode;
-import no.nav.foreldrepenger.fpformidling.domene.tilkjentytelse.TilkjentYtelseAndel;
-import no.nav.foreldrepenger.fpformidling.domene.tilkjentytelse.TilkjentYtelsePeriode;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.ForeldrepengerUttak;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.PeriodeResultatType;
 import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.PeriodeResultatÅrsak;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.UttakAktivitet;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.UttakArbeidType;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.UttakResultatPeriode;
-import no.nav.foreldrepenger.fpformidling.domene.uttak.fp.UttakResultatPeriodeAktivitet;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.felles.Prosent;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.felles.Årsak;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsefp.AnnenAktivitet;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsefp.Arbeidsforhold;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsefp.Næring;
 import no.nav.foreldrepenger.fpformidling.integrasjon.dokgen.dto.innvilgelsefp.Vedtaksperiode;
+import no.nav.foreldrepenger.fpformidling.integrasjon.fpsak.BrevGrunnlagBuilders;
 import no.nav.foreldrepenger.fpformidling.typer.DatoIntervall;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.BeregningsgrunnlagAndelDto;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.BeregningsgrunnlagPeriodeDto;
+import no.nav.foreldrepenger.kontrakter.fpsak.beregningsgrunnlag.v2.kodeverk.AktivitetStatusDto;
 
 class VedtaksperiodeMapperTest {
+
+    public static final UnaryOperator<String> HENT_NAVN = _ -> "Navn";
 
     @Test
     void skal_hente_dato_fra_uttaksperiode_når_denne_er_før_tilkjentytelseperioden_og_det_er_første_tilkjentYtelsePeriode() {
         // Arrange
-        var tidsperiodeBp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
-        var tidsperiodeBp2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 3), LocalDate.of(2019, 10, 4));
-        var tidsperiodeBp3 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
+        var tidsperiodeTilkjent1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
+        var tidsperiodeTilkjent2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 3), LocalDate.of(2019, 10, 4));
+        var tidsperiodeTilkjent3 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var tidsperiodeUp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 7, 3), LocalDate.of(2019, 10, 4));
         var tidsperiodeUp2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var beregningPer = DatoIntervall.fraOgMed(LocalDate.of(2019, 9, 30));
 
-        var tyPeriode = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp1).medDagsats(0L).build();
-        var tyPeriode2 = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp2).medDagsats(0L).build();
-        var tyPeriode3 = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp3).medDagsats(620L).build();
+        var tyPeriode = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent1.getFomDato(), tidsperiodeTilkjent1.getTomDato(), 0, List.of());
+        var tyPeriode2 = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent2.getFomDato(), tidsperiodeTilkjent2.getTomDato(), 0, List.of());
+        var tyPeriode3 = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent3.getFomDato(), tidsperiodeTilkjent3.getTomDato(), 620, List.of());
         var tilkjentYtelsePerioder = of(tyPeriode, tyPeriode2, tyPeriode3);
 
-        var bgPeriode = BeregningsgrunnlagPeriode.ny().medPeriode(beregningPer).medDagsats(620L).build();
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(620L, null, null, List.of(), beregningPer.getFomDato(), beregningPer.getTomDato(), List.of());
         var beregningsgrunnlagPerioder = of(bgPeriode);
 
-        var uttakAktivitet = UttakResultatPeriodeAktivitet.ny().medTrekkdager(BigDecimal.TEN).medUtbetalingsprosent(BigDecimal.ZERO).build();
-        var uPeriode = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet))
-            .medTidsperiode(tidsperiodeUp1)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER)
-            .medPeriodeResultatType(PeriodeResultatType.AVSLÅTT)
-            .build();
-        var uttakAktivitet2 = UttakResultatPeriodeAktivitet.ny()
-            .medTrekkdager(BigDecimal.ZERO)
-            .medUtbetalingsprosent(BigDecimal.valueOf(100L))
-            .build();
-        var uPeriode2 = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet2))
-            .medTidsperiode(tidsperiodeUp2)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT)
-            .medPeriodeResultatType(PeriodeResultatType.INNVILGET)
-            .build();
-        var uttaksPerioder = uttak(of(uPeriode, uPeriode2), of());
+        var uttakAktivitet = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.FRILANS, false);
+        var uPeriode = new Foreldrepenger.Uttaksperiode(tidsperiodeUp1.getFomDato(), tidsperiodeUp1.getTomDato(), of(uttakAktivitet),
+            PeriodeResultatType.AVSLÅTT, PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+
+        var uttakAktivitet2 = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.ZERO,
+            null, null, null, BigDecimal.valueOf(100), UttakArbeidType.FRILANS, false);
+        var uPeriode2 = new Foreldrepenger.Uttaksperiode(tidsperiodeUp2.getFomDato(), tidsperiodeUp2.getTomDato(), of(uttakAktivitet2),
+            PeriodeResultatType.INNVILGET, PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+        var uttaksPerioder = foreldrepenger(of(uPeriode, uPeriode2), of());
 
         // Act
         var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).hasSize(2);
 
-        assertThat(resultat.get(0).getPeriodeFom()).isEqualTo(uPeriode.getFom());
-        assertThat(resultat.get(0).getPeriodeTom()).isEqualTo(uPeriode.getTom());
-        assertThat(resultat.get(0).isInnvilget()).isFalse();
+        assertThat(resultat.getFirst().getPeriodeFom()).isEqualTo(uPeriode.fom());
+        assertThat(resultat.getFirst().getPeriodeTom()).isEqualTo(uPeriode.tom());
+        assertThat(resultat.getFirst().isInnvilget()).isFalse();
         assertThat(resultat.get(0).getPeriodeDagsats()).isZero();
         assertThat(resultat.get(0).getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER.getKode());
 
-        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode3.getPeriodeFom());
-        assertThat(resultat.get(1).getPeriodeTom()).isEqualTo(tyPeriode3.getPeriodeTom());
+        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode3.fom());
+        assertThat(resultat.get(1).getPeriodeTom()).isEqualTo(tyPeriode3.tom());
         assertThat(resultat.get(1).isInnvilget()).isTrue();
         assertThat(resultat.get(1).getPeriodeDagsats()).isEqualTo(620L);
         assertThat(resultat.get(1).getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT.getKode());
@@ -100,102 +97,91 @@ class VedtaksperiodeMapperTest {
     @Test
     void verifisere_at_resultatet_blir_det_samme_om_periodene_ikke_er_sortert() {
         // Arrange
-        var tidsperiodeBp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
-        var tidsperiodeBp2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 3), LocalDate.of(2019, 10, 4));
-        var tidsperiodeBp3 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
+        var tidsperiodeTilkjent1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
+        var tidsperiodeTilkjent2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 3), LocalDate.of(2019, 10, 4));
+        var tidsperiodeTilkjent3 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var tidsperiodeUp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 7, 3), LocalDate.of(2019, 10, 4));
         var tidsperiodeUp2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var beregningPer = DatoIntervall.fraOgMed(LocalDate.of(2019, 9, 30));
 
-        var tyPeriode = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp1).medDagsats(0L).build();
-        var tyPeriode2 = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp2).medDagsats(0L).build();
-        var tyPeriode3 = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp3).medDagsats(620L).build();
+        var tyPeriode = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent1.getFomDato(), tidsperiodeTilkjent1.getTomDato(), 0, List.of());
+        var tyPeriode2 = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent2.getFomDato(), tidsperiodeTilkjent2.getTomDato(), 0, List.of());
+        var tyPeriode3 = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent3.getFomDato(), tidsperiodeTilkjent3.getTomDato(), 620, List.of());
         var tilkjentYtelsePerioder = of(tyPeriode3, tyPeriode2, tyPeriode);
 
-        var bgPeriode = BeregningsgrunnlagPeriode.ny().medPeriode(beregningPer).medDagsats(620L).build();
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(620L, null, null, List.of(), beregningPer.getFomDato(), beregningPer.getTomDato(), List.of());
         var beregningsgrunnlagPerioder = of(bgPeriode);
 
-        var uttakAktivitet = UttakResultatPeriodeAktivitet.ny().medTrekkdager(BigDecimal.TEN).medUtbetalingsprosent(BigDecimal.ZERO).build();
-        var uPeriode = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet))
-            .medTidsperiode(tidsperiodeUp1)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER)
-            .medPeriodeResultatType(PeriodeResultatType.AVSLÅTT)
-            .build();
-        var uttakAktivitet2 = UttakResultatPeriodeAktivitet.ny()
-            .medTrekkdager(BigDecimal.ZERO)
-            .medUtbetalingsprosent(BigDecimal.valueOf(100L))
-            .build();
-        var uPeriode2 = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet2))
-            .medTidsperiode(tidsperiodeUp2)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT)
-            .medPeriodeResultatType(PeriodeResultatType.INNVILGET)
-            .build();
-        var uttaksPerioder = uttak(of(uPeriode2, uPeriode), of());
+        var uttakAktivitet = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.FRILANS, false);
+        var uPeriode = new Foreldrepenger.Uttaksperiode(tidsperiodeUp1.getFomDato(), tidsperiodeUp1.getTomDato(), of(uttakAktivitet),
+            PeriodeResultatType.AVSLÅTT, PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+
+        var uttakAktivitet2 = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.ZERO,
+            null, null, null, BigDecimal.valueOf(100), UttakArbeidType.FRILANS, false);
+        var uPeriode2 = new Foreldrepenger.Uttaksperiode(tidsperiodeUp2.getFomDato(), tidsperiodeUp2.getTomDato(), of(uttakAktivitet2),
+            PeriodeResultatType.INNVILGET, PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+        var foreldrepenger = foreldrepenger(of(uPeriode2, uPeriode), of());
 
         // Act
-        var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+        var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, foreldrepenger, beregningsgrunnlagPerioder,
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).hasSize(2);
-        assertThat(resultat.get(0).getPeriodeFom()).isEqualTo(uPeriode.getFom());
-        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode3.getPeriodeFom());
+        assertThat(resultat.get(0).getPeriodeFom()).isEqualTo(uPeriode.fom());
+        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode3.fom());
     }
 
-    private ForeldrepengerUttak uttak(List<UttakResultatPeriode> søkersPerioder, List<UttakResultatPeriode> annenPartPerioder) {
-        return new ForeldrepengerUttak(søkersPerioder, annenPartPerioder);
+    private Foreldrepenger foreldrepenger(List<Foreldrepenger.Uttaksperiode> søkersPerioder, List<Foreldrepenger.Uttaksperiode> annenPartPerioder) {
+        return BrevGrunnlagBuilders.foreldrepenger().perioderSøker(søkersPerioder).perioderAnnenpart(annenPartPerioder).build();
     }
 
     @Test
     void skal_sortere_perioder_uten_beregningsgrunnlag_også() {
         // Arrange
-        var tidsperiodeBp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
+        var tidsperiodeTilkjent1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var tidsperiodeUp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 10, 7), LocalDate.of(2019, 12, 31));
         var tidsperiodeUp2 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 6, 20), LocalDate.of(2019, 6, 29)); // Skal sorteres først
         var beregningPer = DatoIntervall.fraOgMed(LocalDate.of(2019, 9, 30));
 
-        var tyPeriode1 = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp1).medDagsats(620L).build();
+        var tyPeriode1 = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent1.getFomDato(), tidsperiodeTilkjent1.getTomDato(), 620, List.of());
         var tilkjentYtelsePerioder = of(tyPeriode1);
 
-        var bgPeriode = BeregningsgrunnlagPeriode.ny().medPeriode(beregningPer).medDagsats(620L).build();
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(620L, null, null, List.of(), beregningPer.getFomDato(), beregningPer.getTomDato(), List.of());
         var beregningsgrunnlagPerioder = of(bgPeriode);
 
-        var uttakAktivitet1 = UttakResultatPeriodeAktivitet.ny()
-            .medTrekkdager(BigDecimal.ZERO)
-            .medUtbetalingsprosent(BigDecimal.valueOf(100L))
-            .build();
-        var uPeriode1 = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet1))
-            .medTidsperiode(tidsperiodeUp1)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT)
-            .medPeriodeResultatType(PeriodeResultatType.INNVILGET)
-            .build();
-        var uttakAktivitet2 = UttakResultatPeriodeAktivitet.ny().medTrekkdager(BigDecimal.TEN).medUtbetalingsprosent(BigDecimal.ZERO).build();
-        var uPeriode2 = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet2))
-            .medTidsperiode(tidsperiodeUp2)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.MOR_HAR_IKKE_OMSORG)
-            .medPeriodeResultatType(PeriodeResultatType.AVSLÅTT)
-            .build();
-        var uttaksPerioder = uttak(of(uPeriode1, uPeriode2), of());
+        var uttakAktivitet1 = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.ZERO,
+            null, null, null, BigDecimal.valueOf(100), UttakArbeidType.FRILANS, false);
+        var uPeriode1 = new Foreldrepenger.Uttaksperiode(tidsperiodeUp1.getFomDato(), tidsperiodeUp1.getTomDato(), of(uttakAktivitet1),
+            PeriodeResultatType.INNVILGET, PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+
+        var uttakAktivitet2 = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.FRILANS, false);
+        var uPeriode2 = new Foreldrepenger.Uttaksperiode(tidsperiodeUp2.getFomDato(), tidsperiodeUp2.getTomDato(), of(uttakAktivitet2),
+            PeriodeResultatType.AVSLÅTT, PeriodeResultatÅrsak.MOR_HAR_IKKE_OMSORG.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
+
+        var uttaksPerioder = foreldrepenger(of(uPeriode1, uPeriode2), of());
 
         // Act
         var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).hasSize(2);
 
-        assertThat(resultat.get(0).getPeriodeFom()).isEqualTo(uPeriode2.getFom());
-        assertThat(resultat.get(0).getPeriodeTom()).isEqualTo(uPeriode2.getTom());
-        assertThat(resultat.get(0).isInnvilget()).isFalse();
+        assertThat(resultat.getFirst().getPeriodeFom()).isEqualTo(uPeriode2.fom());
+        assertThat(resultat.getFirst().getPeriodeTom()).isEqualTo(uPeriode2.tom());
+        assertThat(resultat.getFirst().isInnvilget()).isFalse();
         assertThat(resultat.get(0).getPeriodeDagsats()).isZero();
         assertThat(resultat.get(0).getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.MOR_HAR_IKKE_OMSORG.getKode());
 
-        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode1.getPeriodeFom());
-        assertThat(resultat.get(1).getPeriodeTom()).isEqualTo(tyPeriode1.getPeriodeTom());
+        assertThat(resultat.get(1).getPeriodeFom()).isEqualTo(tyPeriode1.fom());
+        assertThat(resultat.get(1).getPeriodeTom()).isEqualTo(tyPeriode1.tom());
         assertThat(resultat.get(1).isInnvilget()).isTrue();
         assertThat(resultat.get(1).getPeriodeDagsats()).isEqualTo(620L);
         assertThat(resultat.get(1).getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.OVERFORING_KVOTE_GYLDIG_KUN_FAR_HAR_RETT.getKode());
@@ -204,81 +190,65 @@ class VedtaksperiodeMapperTest {
     @Test
     void skal_mappe_annenAktitetListe_når_den_inneholder_annet() {
         // Arrange
-        var tidsperiodeBp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
+        var tidsperiodeTilkjent1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 30), LocalDate.of(2019, 10, 2));
         var tidsperiodeUp1 = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 7, 3), LocalDate.of(2019, 10, 4));
         var beregningPer = DatoIntervall.fraOgMed(LocalDate.of(2019, 9, 30));
 
-        var tilkjentYtelseAndel = TilkjentYtelseAndel.ny().medAktivitetStatus(AktivitetStatus.KOMBINERT_AT_FL).build();
-        var tyPeriode = TilkjentYtelsePeriode.ny().medPeriode(tidsperiodeBp1).medDagsats(0L).medAndeler(of(tilkjentYtelseAndel)).build();
+        var tilkjentYtelseAndel = new TilkjentYtelseAndelDto(null, 0, 0, Aktivitetstatus.KOMBINERT_AT_FL, null, null, null);
 
-        var prStatusOgAndel = BeregningsgrunnlagPrStatusOgAndel.ny().medBeregningsperiode(tidsperiodeUp1).build();
-
+        var tyPeriode = new TilkjentYtelsePeriodeDto(tidsperiodeTilkjent1.getFomDato(), tidsperiodeTilkjent1.getTomDato(), 0, List.of(tilkjentYtelseAndel));
         var tilkjentYtelsePerioder = of(tyPeriode);
 
-        var bgPeriode = BeregningsgrunnlagPeriode.ny()
-            .medPeriode(beregningPer)
-            .medDagsats(620L)
-            .medBeregningsgrunnlagPrStatusOgAndelList(of(prStatusOgAndel))
-            .build();
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(620L, null, null, List.of(), beregningPer.getFomDato(), beregningPer.getTomDato(), List.of(new BeregningsgrunnlagAndelDto(620L,
+            AktivitetStatusDto.KOMBINERT_AT_FL, null, null, false, null, tidsperiodeTilkjent1.getFomDato(), tidsperiodeTilkjent1.getTomDato(), null, false)));
         var beregningsgrunnlagPerioder = of(bgPeriode);
 
-        var uttakAktivitet = UttakAktivitet.ny().medUttakArbeidType(UttakArbeidType.ANNET).build();
+        var uttakResultatPeriodeAktivitet = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            BigDecimal.valueOf(20), null, null, BigDecimal.ZERO, UttakArbeidType.ANNET, false);
+        var uttakResultatPeriodeAktivitet2 = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.ANNET, false);
 
-        var uttakResultatPeriodeAktivitet = UttakResultatPeriodeAktivitet.ny()
-            .medTrekkdager(BigDecimal.TEN)
-            .medUtbetalingsprosent(BigDecimal.ZERO)
-            .medUttakAktivitet(uttakAktivitet)
-            .medGraderingInnvilget(true)
-            .medArbeidsprosent(BigDecimal.valueOf(20))
-            .build();
 
-        var uttakResultatPeriodeAktivitet2 = UttakResultatPeriodeAktivitet.ny()
-            .medTrekkdager(BigDecimal.TEN)
-            .medUtbetalingsprosent(BigDecimal.ZERO)
-            .medUttakAktivitet(uttakAktivitet)
-            .build();
-        var uPeriode = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakResultatPeriodeAktivitet, uttakResultatPeriodeAktivitet2))
-            .medTidsperiode(tidsperiodeUp1)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.UTSETTELSE_GYLDIG_PGA_ARBEID_KUN_FAR_HAR_RETT)
-            .medPeriodeResultatType(PeriodeResultatType.INNVILGET)
-            .build();
+        var uPeriode = new Foreldrepenger.Uttaksperiode(tidsperiodeUp1.getFomDato(), tidsperiodeUp1.getTomDato(), of(uttakResultatPeriodeAktivitet, uttakResultatPeriodeAktivitet2),
+            PeriodeResultatType.INNVILGET, PeriodeResultatÅrsak.UTSETTELSE_GYLDIG_PGA_ARBEID_KUN_FAR_HAR_RETT.getKode(), null, "14-10", null,
+            tidsperiodeTilkjent1.getFomDato().minusWeeks(1), false);
 
-        var uttaksPerioder = uttak(of(uPeriode), of());
+        var uttaksPerioder = foreldrepenger(of(uPeriode), of());
 
         // Act
         var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).hasSize(1);
 
-        assertThat(resultat.get(0).isInnvilget()).isTrue();
-        assertThat(resultat.get(0).getPeriodeDagsats()).isZero();
-        assertThat(resultat.get(0).getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.UTSETTELSE_GYLDIG_PGA_ARBEID_KUN_FAR_HAR_RETT.getKode());
-        assertThat(resultat.get(0).getAnnenAktivitetsliste()).hasSize(1);
+        assertThat(resultat.getFirst().isInnvilget()).isTrue();
+        assertThat(resultat.getFirst().getPeriodeDagsats()).isZero();
+        assertThat(resultat.getFirst().getÅrsak().getKode()).isEqualTo(PeriodeResultatÅrsak.UTSETTELSE_GYLDIG_PGA_ARBEID_KUN_FAR_HAR_RETT.getKode());
+        assertThat(resultat.getFirst().getAnnenAktivitetsliste()).hasSize(1);
     }
 
     @Test
     void skal_ignorere_avslåtte_manglende_søkte_perioder_med_null_trekkdager_ved_mapping_av_periodeliste() {
         // Arrange
         var tidsperiode = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 16), LocalDate.of(2019, 9, 16));
-        var tyPeriode = TilkjentYtelsePeriode.ny().medPeriode(tidsperiode).build();
-        var tilkjentYtelsePerioder = of(tyPeriode);
-        var uttakAktivitet = UttakResultatPeriodeAktivitet.ny().medTrekkdager(BigDecimal.ZERO).medUtbetalingsprosent(BigDecimal.ZERO).build();
-        var uPeriode = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet))
-            .medTidsperiode(tidsperiode)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER)
-            .medPeriodeResultatType(PeriodeResultatType.AVSLÅTT)
-            .build();
-        var uttaksPerioder = uttak(of(uPeriode), of());
-        var bgPeriode = BeregningsgrunnlagPeriode.ny().medPeriode(tidsperiode).build();
-        var beregningsgrunnlagPerioder = of(bgPeriode);
 
+        var tyPeriode = new TilkjentYtelsePeriodeDto(tidsperiode.getFomDato(), tidsperiode.getTomDato(), null, List.of());
+        var tilkjentYtelsePerioder = of(tyPeriode);
+
+        var uttakAktivitet = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.ZERO,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.FRILANS, false);
+        var uPeriode = new Foreldrepenger.Uttaksperiode(tidsperiode.getFomDato(), tidsperiode.getTomDato(), of(uttakAktivitet),
+            PeriodeResultatType.AVSLÅTT, PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER.getKode(), null, "14-10", null,
+            tidsperiode.getFomDato().minusWeeks(1), false);
+
+        var uttaksPerioder = foreldrepenger(of(uPeriode), of());
+
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(null, null, null, List.of(), tidsperiode.getFomDato(), tidsperiode.getTomDato(), List.of());
+        var beregningsgrunnlagPerioder = of(bgPeriode);
         // Act
         var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).isEmpty();
@@ -288,23 +258,23 @@ class VedtaksperiodeMapperTest {
     void skal_ta_med_avslåtte_manglende_søkte_perioder_med_trekkdager_ved_mapping_av_periodeliste() {
         // Arrange
         var tidsperiode = DatoIntervall.fraOgMedTilOgMed(LocalDate.of(2019, 9, 16), LocalDate.of(2019, 9, 16));
-        var tyPeriode = TilkjentYtelsePeriode.ny().medPeriode(tidsperiode).build();
-        var tilkjentYtelsePerioder = of(tyPeriode);
-        var uttakAktivitet = UttakResultatPeriodeAktivitet.ny().medTrekkdager(BigDecimal.TEN).medUtbetalingsprosent(BigDecimal.ZERO).build();
-        var uPeriode = UttakResultatPeriode.ny()
-            .medAktiviteter(of(uttakAktivitet))
-            .medTidsperiode(tidsperiode)
-            .medPeriodeResultatÅrsak(PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER)
-            .medPeriodeResultatType(PeriodeResultatType.AVSLÅTT)
-            .medTidligstMottattDato(tidsperiode.getFomDato())
-            .build();
-        var uttaksPerioder = uttak(of(uPeriode), of());
-        var bgPeriode = BeregningsgrunnlagPeriode.ny().medPeriode(tidsperiode).build();
-        var beregningsgrunnlagPerioder = of(bgPeriode);
 
+        var tyPeriode = new TilkjentYtelsePeriodeDto(tidsperiode.getFomDato(), tidsperiode.getTomDato(), null, List.of());
+        var tilkjentYtelsePerioder = of(tyPeriode);
+
+        var uttakAktivitet = new Foreldrepenger.Aktivitet(Foreldrepenger.TrekkontoType.FELLESPERIODE, BigDecimal.TEN,
+            null, null, null, BigDecimal.ZERO, UttakArbeidType.FRILANS, false);
+        var uPeriode = new Foreldrepenger.Uttaksperiode(tidsperiode.getFomDato(), tidsperiode.getTomDato(), of(uttakAktivitet),
+            PeriodeResultatType.AVSLÅTT, PeriodeResultatÅrsak.HULL_MELLOM_FORELDRENES_PERIODER.getKode(), null, "14-10", null,
+            tidsperiode.getFomDato(), false);
+
+        var uttaksPerioder = foreldrepenger(of(uPeriode), of());
+
+        var bgPeriode = new BeregningsgrunnlagPeriodeDto(null, null, null, List.of(), tidsperiode.getFomDato(), tidsperiode.getTomDato(), List.of());
+        var beregningsgrunnlagPerioder = of(bgPeriode);
         // Act
         var resultat = VedtaksperiodeMapper.mapVedtaksperioder(tilkjentYtelsePerioder, uttaksPerioder, beregningsgrunnlagPerioder,
-            Språkkode.NB);
+            Språkkode.NB, HENT_NAVN);
 
         // Assert
         assertThat(resultat).hasSize(1);
